--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1372,7 +1372,7 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
-.cid-qTkzRZLJNu .navbar {
+.rqTkzRZLJNu .navbar {
   padding: .5rem 0;
   background: #0f7699;
   transition: none;
