--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@ main {
 
 .bv-video-wrap::before {
   /* Optional overlay */
-  content: 'url(assets/images/veerlogo.png)';
+  content: url(assets/images/veerlogo.png);
   position: absolute;
   height: 100%;
   width: 100%;
