--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,6 +56,12 @@ video {
   z-index: 10;
 }
 
+.logo {
+  position: absolute;
+  height: 100%;
+  z-index: 10;
+}
+
 main {
   margin: 0 auto;
   width: 80%;
