--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -479,7 +479,7 @@ body {
   color: #b1a374 !important;
 }
 .text-white {
-  color: #ffffff !important;
+  color: ##14B6F3 !important;
 }
 .text-black {
   color: #000000 !important;
