--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ li {
   margin: 2rem;
 }
 
+a {
+  color: #268CFF !important;
+}
+
 .centered-nav{
  width: 100%;
 }
@@ -20,7 +24,17 @@ li {
 }
 
 video {
-  height: auto;
+  height: 100%;
   vertical-align: middle;
+  position: fixed;
+}
+
+nav {
+  margin-top: 1.5rem;
+}
+
+img {
+  position: absolute;
   width: 100%;
+  z-index: 2;
 }
